--- a/WebContent/cadastroUsr.xhtml
+++ b/WebContent/cadastroUsr.xhtml
@@ -21,7 +21,7 @@
 			<p:inputText id="nome_usr" value="#{usrBean.usr.nome}"/>
 			<p:message for="nome_usr" />
 									
-			<p:outputLabel for="sobrenome" value="Sobrenome eyqwyegyqwe:"/>
+			<p:outputLabel for="sobrenome" value="Sobrenome:"/>
 			<p:inputText id="sobrenome" value="#{usrBean.usr.sobrenome}" />
 			<p:messages for="sobrenome"/>
 			
