--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -13,7 +13,7 @@
 
 		<ui:define name="botoesAcao">
 			<p:commandButton value="Entrar"  update="@form"/>
-			<p:commandButton value="Cadastre-se"  action=""/>
+			<p:commandButton value="Cadastre-se"  action="#"/>
 
 				
 								
