Classe teste de login, só falta mudar de tela quando clicar no entrar

--- a/WebContent/login.xhtml
+++ b/WebContent/login.xhtml
@@ -12,8 +12,8 @@
 	
 
 		<ui:define name="botoesAcao">
-			<p:commandButton value="Entrar"  update="@form"/>
-			<p:commandButton value="Cadastre-se"  action=""/>
+			<p:commandButton value="Entrar" action="#{usrBean.login()}" update="@form"/>
+			<p:commandButton value="Cadastre-se" />
 
 				
 								
